--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,23 @@ dependencies = [
     "psycopg[binary]>=3.3.0",
     "python-docx>=1.2.0",
     "python-dotenv>=1.2.1",
+    "ruff>=0.14.7",
     "sqlalchemy>=2.0.44",
 ]
+[tool.ruff]
+line-length = 88
+target-version = "py314"
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "N",   # pep8-naming
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "ARG", # flake8-unused-arguments
+]
+ignore = []
