--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.17.2",
+    "asyncpg>=0.31.0",
     "fastapi[standard]>=0.123.3",
-    "psycopg[binary]>=3.3.0",
+    "psycopg2-binary>=2.9.11",
     "python-docx>=1.2.0",
     "python-dotenv>=1.2.1",
     "ruff>=0.14.7",
